--- a/languages/default.yml
+++ b/languages/default.yml
@@ -1,121 +1,122 @@
 footer:
-  framework: Framework
-  theme: Theme
+  framework: 框架
+  theme: 主题
 
 copy:
-  success: Copy Successful
-  error: Copy Failed
-  noSupport: Browser Not Supported
+  success: 复制成功
+  error: 复制失败
+  noSupport: 浏览器不支持
 
 page:
-  articles: All Articles
-  tag: Tag
-  category: Category
-  archives: Archives
+  articles: 全部文章
+  tag: 标签
+  category: 分类
+  archives: 归档
 
-card_post_count: comments
+card_post_count: 条评论
 
-no_title: Untitled
+no_title: 无标题
 
 post:
-  created: Created
-  updated: Updated
-  wordcount: Word Count
-  min2read: Reading Time
-  min2read_unit: mins
-  page_pv: Post Views
-  comments: Comments
+  created: 发表于
+  updated: 更新于
+  wordcount: 总字数
+  min2read: 阅读时长
+  min2read_unit: 分钟
+  page_pv: 浏览量
+  comments: 评论数
   copyright:
-    author: Author
-    link: Link
-    copyright_notice: Copyright Notice
-    copyright_content: 'All articles on this blog are licensed under <a href="%s">%s</a> unless otherwise stated.'
-  recommend: Related Articles
-  edit: Edit
+    author: 文章作者
+    link: 文章链接
+    copyright_notice: 版权声明
+    copyright_content: '本博客所有文章除特别声明外，均采用
+      <a href="%s" target="_blank">%s</a> 许可协议。转载请注明来源 <a href="%s" target="_blank">%s</a>！'
+  recommend: 相关推荐
+  edit: 编辑
 
 search:
-  title: Search
-  load_data: Loading Database
-  input_placeholder: Search for Posts
+  title: 搜索
+  load_data: 数据加载中
+  input_placeholder: 搜索文章
   algolia_search:
-    hits_empty: 'No results found for: ${query}'
-    hits_stats: '${hits} results found in ${time} ms'
+    hits_empty: '未找到符合您查询的内容：${query}'
+    hits_stats: '找到 ${hits} 条结果，耗时 ${time} 毫秒'
   local_search:
-    hits_empty: 'No results found for: ${query}'
-    hits_stats: '${hits} articles found'
+    hits_empty: '未找到符合您查询的内容：${query}'
+    hits_stats: '共找到 ${hits} 篇文章'
 
 pagination:
-  prev: Previous
-  next: Next
+  prev: 上一篇
+  next: 下一篇
 
-comment: Comments
+comment: 评论
 
 aside:
-  articles: Articles
-  tags: Tags
-  categories: Categories
-  card_announcement: Announcement
-  card_categories: Categories
-  card_tags: Tags
-  card_archives: Archives
-  card_recent_post: Recent Posts
+  articles: 文章
+  tags: 标签
+  categories: 分类
+  card_announcement: 公告
+  card_categories: 分类
+  card_tags: 标签
+  card_archives: 归档
+  card_recent_post: 最新文章
   card_webinfo:
-    headline: Website Info
-    article_name: Article Count
+    headline: 网站信息
+    article_name: 文章数目
     runtime:
-      name: Runtime
-      unit: days
+      name: 运行时间
+      unit: 天
     last_push_date:
-      name: Last Update
-    site_wordcount: Total Word Count
-    site_uv_name: Unique Visitors
-    site_pv_name: Page Views
-  more_button: View More
+      name: 最后更新时间
+    site_wordcount: 本站总字数
+    site_uv_name: 本站访客数
+    site_pv_name: 本站总浏览量
+  more_button: 查看更多
   card_newest_comments:
-    headline: Latest Comments
-    loading_text: Loading...
-    error: Unable to retrieve comments, please check the configuration
-    zero: No comments
-    image: Image
-    link: Link
-    code: Code
-  card_toc: Contents
-  card_post_series: Post Series
+    headline: 最新评论
+    loading_text: 加载中...
+    error: 无法获取评论，请确认相关配置是否正确
+    zero: 暂无评论
+    image: 图片
+    link: 链接
+    code: 代码
+  card_toc: 目录
+  card_post_series: 系列文章
 
 date_suffix:
-  just: Just now
-  min: minutes ago
-  hour: hours ago
-  day: days ago
-  month: months ago
+  just: 刚刚
+  min: 分钟前
+  hour: 小时前
+  day: 天前
+  month: 个月前
 
-donate: Sponsor
-share: Share
+donate: 赞助
+share: 分享
 
 rightside:
-  readmode_title: Reading Mode
-  translate_title: Toggle Between Traditional and Simplified Chinese
-  night_mode_title: Toggle Between Light and Dark Mode
-  back_to_top: Back to Top
-  toc: Table of Contents
-  scroll_to_comment: Scroll to Comments
-  setting: Settings
-  aside: Toggle Between Single-column and Double-column
-  chat: Chat
+  readmode_title: 阅读模式
+  translate_title: 简繁转换
+  night_mode_title: 日间和夜间模式切换
+  back_to_top: 回到顶部
+  toc: 目录
+  scroll_to_comment: 前往评论
+  setting: 设置
+  aside: 单栏和双栏切换
+  chat: 聊天
 
 copy_copyright:
-  author: Author
-  link: Link
-  source: Source
-  info: Copyright belongs to the author. For commercial use, please contact the author for authorization. For non-commercial use, please indicate the source.
+  author: 作者
+  link: 链接
+  source: 来源
+  info: 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 
 Snackbar:
-  chs_to_cht: You have switched to Traditional Chinese
-  cht_to_chs: You have switched to Simplified Chinese
-  day_to_night: You have switched to Dark Mode
-  night_to_day: You have switched to Light Mode
+  chs_to_cht: 已切换为繁体中文
+  cht_to_chs: 已切换为简体中文
+  day_to_night: 已切换为深色模式
+  night_to_day: 已切换为浅色模式
 
-loading: Loading...
-load_more: Load More
+loading: 加载中...
+load_more: 加载更多
 
-error404: Page Not Found
+error404: 页面未找到
